Fixed issue with nav z-indexing.

--- a/style.css
+++ b/style.css
@@ -571,6 +571,7 @@ footer a {
 .nav-collapse ul {
     list-style-type: none;
     margin: 0;
+    z-index: 2;
 }
 
 .nav-collapse input {
@@ -578,7 +579,7 @@ footer a {
     position: absolute;
     width: 40px;
     height: 32px;
-    z-index: 2;
+    z-index: 4;
     opacity: 0%;
     cursor: pointer;
     margin-left: -10px;
@@ -619,7 +620,7 @@ footer a {
   background: #9e5a63;
   border-radius: 3px;
   
-  z-index: 1;
+  z-index: 3;
   
   transform-origin: 4px 0px;
   
